package SistemaSensoresLegado;

public interface Display {
    void mostrarDados(String tipo, String valor);
}
