package SistemaSensoresLegado;

public interface Sensor {

    String lerValor(); 
    String getTipo();
}
