package SistemaSensoresLegado;

public abstract class SensorFactory {
    
    public abstract Sensor criarSensor();
}